plugins {
    id 'java'
    id 'idea'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '1.2.4'
    id 'com.github.hierynomus.jython' version '0.6.0'
}

group 'com.khronodragon'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8
archivesBaseName = 'bluestone'
mainClassName = 'com.khronodragon.bluestone.Start'

repositories {
    mavenCentral()
    jcenter()
    maven {
        url 'http://repo.boundlessgeo.com/main/'
    }
}

task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'Bluestone',
                'Implementation-Version': version,
                'Main-Class': 'com.khronodragon.bluestone.Start'
    }
    baseName = project.name + '-all'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

dependencies {
    compile 'net.dv8tion:JDA:3.1.1_212'
    compile 'com.google.code.gson:gson:2.8.0'
    compile 'com.sedmelluq:lavaplayer:1.2.39'
    compile 'com.mashape.unirest:unirest-java:1.4.9'
    compile 'com.google.guava:guava:22.0'
    compile 'org.reflections:reflections:0.9.11'
    compile 'org.python:jython-standalone:2.7.1b3'
    compile 'org.codehaus.groovy:groovy-jsr223:2.4.11'
    compile 'org.apache.logging.log4j:log4j-api:2.8.2'
    compile 'org.apache.logging.log4j:log4j-core:2.8.2'
    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.8.2'
    compile 'org.beanshell:bsh:2.1b5'
    compile 'com.lmax:disruptor:3.3.6'
}
/*
tasks.withType(ScalaCompile) {
    configure(scalaCompileOptions.forkOptions) {
        memoryMaximumSize = '1G'
        jvmArgs = ['-XX:MaxPermSize=512M']
    }
}
*/
compileJava.options.encoding = 'UTF-8'
// compileScala.options.encoding = 'UTF-8'
